@@ -27,4 +27,5 @@
 - Fixed: Recruited AI (when with AI is enabled) was subject of dyanmic simulation thus stopping those player controlled if they were too far away; they did also not trigger dyn sim
 - Fixed: Shooting at objects which can only be destroyed by satchels no longer resets the object damage to zero
 - Fixed: The CUP team renamed some CfgGroups RU infantry class names yet again resulting in less units spawning
+- Removed: d_no_3rd_person parameter (No 3rd person), allowed 3rd person view in vehicles only. There is now a new A3 game difficulty setting (see https://forums.bohemia.net/forums/topic/140837-development-branch-changelog/?do=findComment&comment=3411692)
 - Updated: Korean translation by kkim
