@@ -1,195 +1,0 @@
-/*%FSM<COMPILE "G:\Steam\steamapps\common\Arma 3 Tools\FSMEditor\scriptedFSM.cfg, 3rdperson">*/
-/*%FSM<HEAD>*/
-/*
-item0[] = {"Start",0,250,25.000000,350.000000,125.000000,400.000000,0.000000,"Start"};
-item1[] = {"_",8,218,25.000000,450.000000,125.000000,500.000000,0.000000,""};
-item2[] = {"Loop",2,250,25.000000,550.000000,125.000000,600.000000,0.000000,"Loop"};
-item3[] = {"cameraView_in__n",4,218,25.000000,650.000000,125.000000,700.000000,0.000000,"cameraView" \n "in" \n "_nogo"};
-item4[] = {"__alive_player",4,218,150.000000,650.000000,250.000000,700.000000,2.000000,"!alive" \n "player"};
-item5[] = {"Dummy",2,250,275.000000,650.000000,375.000000,700.000000,0.000000,"Dummy"};
-item6[] = {"alive_player",4,218,275.000000,550.000000,375.000000,600.000000,0.000000,"alive player"};
-item7[] = {"Dummy_1",2,250,25.000000,750.000000,125.000000,800.000000,0.000000,"Dummy"};
-item8[] = {"vehicle_player__1",4,218,25.000000,850.000000,125.000000,900.000000,0.000000,"vehicle player" \n "==" \n "player"};
-item9[] = {"Switch",2,4346,25.000000,950.000000,125.000000,1000.000000,0.000000,"Switch"};
-item10[] = {"_",8,218,-225.000000,750.000000,-125.000000,800.000000,0.000000,""};
-item11[] = {"vehicle_player_",4,218,-100.000000,750.000000,0.000000,800.000000,0.000000,"vehicle player" \n "!=" \n "player"};
-link0[] = {0,1};
-link1[] = {1,2};
-link2[] = {2,3};
-link3[] = {2,4};
-link4[] = {3,7};
-link5[] = {4,5};
-link6[] = {5,6};
-link7[] = {6,2};
-link8[] = {7,4};
-link9[] = {7,8};
-link10[] = {7,11};
-link11[] = {8,9};
-link12[] = {9,10};
-link13[] = {10,2};
-link14[] = {11,2};
-globals[] = {0.000000,0,0,0,0,640,480,1,29,6316128,1,-232.555435,460.990784,1197.070435,331.547363,738,894,1};
-window[] = {2,-1,-1,-1,-1,874,156,1116,156,3,756};
-*//*%FSM</HEAD>*/
-class FSM
-{
-        fsmName = "3rdperson";
-        class States
-        {
-                /*%FSM<STATE "Start">*/
-                class Start
-                {
-                        name = "Start";
-                        itemno = 0;
-                        init = /*%FSM<STATEINIT""">*/"private _view = ""INTERNAL"";" \n
-                         "private _nogo = [""EXTERNAL"",""GROUP""];"/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "_">*/
-                                class _
-                                {
-                                        itemno = 1;
-                                        priority = 0.000000;
-                                        to="Loop";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/""/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-                /*%FSM<STATE "Loop">*/
-                class Loop
-                {
-                        name = "Loop";
-                        itemno = 2;
-                        init = /*%FSM<STATEINIT""">*/""/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "__alive_player">*/
-                                class __alive_player
-                                {
-                                        itemno = 4;
-                                        priority = 2.000000;
-                                        to="Dummy";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"!alive player || {player getVariable [""xr_pluncon"", false] || {player getVariable [""ace_isunconscious"", false]}}"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                                /*%FSM<LINK "cameraView_in__n">*/
-                                class cameraView_in__n
-                                {
-                                        itemno = 3;
-                                        priority = 0.000000;
-                                        to="Dummy_1";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"cameraView in _nogo"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-                /*%FSM<STATE "Dummy">*/
-                class Dummy
-                {
-                        name = "Dummy";
-                        itemno = 5;
-                        init = /*%FSM<STATEINIT""">*/""/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "alive_player">*/
-                                class alive_player
-                                {
-                                        itemno = 6;
-                                        priority = 0.000000;
-                                        to="Loop";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"!(player getVariable ""xr_pluncon"") || {alive player}"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-                /*%FSM<STATE "Dummy_1">*/
-                class Dummy_1
-                {
-                        name = "Dummy_1";
-                        itemno = 7;
-                        init = /*%FSM<STATEINIT""">*/""/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "__alive_player">*/
-                                class __alive_player
-                                {
-                                        itemno = 4;
-                                        priority = 2.000000;
-                                        to="Dummy";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"!alive player || {player getVariable [""xr_pluncon"", false] || {player getVariable [""ace_isunconscious"", false]}}"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                                /*%FSM<LINK "vehicle_player_">*/
-                                class vehicle_player_
-                                {
-                                        itemno = 11;
-                                        priority = 0.000000;
-                                        to="Loop";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"!isNull objectParent player"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                                /*%FSM<LINK "vehicle_player__1">*/
-                                class vehicle_player__1
-                                {
-                                        itemno = 8;
-                                        priority = 0.000000;
-                                        to="Switch";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"isNull objectParent player"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-                /*%FSM<STATE "Switch">*/
-                class Switch
-                {
-                        name = "Switch";
-                        itemno = 9;
-                        init = /*%FSM<STATEINIT""">*/"player switchCamera _view;" \n
-                         "systemChat (localize ""STR_DOM_MISSIONSTRING_1410"");"/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "_">*/
-                                class _
-                                {
-                                        itemno = 10;
-                                        priority = 0.000000;
-                                        to="Loop";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/""/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-        };
-        initState="Start";
-        finalStates[] =
-        {
-        };
-};
-/*%FSM</COMPILE>*/
